# cs107-FinalProject

./: .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test.py  travis.yml  trivial_code.py
docs/: Background.ipynb  background.md  milestone1.ipynb  milestone1.md
docs/documentation/: documentation.ipynb
docs/documentation/.ipynb_checkpoints/: documentation-checkpoint.ipynb  milestone1-checkpoint.ipynb
docs/milestone1/: milestone1.ipynb
docs/milestone2/: milestone1.ipynb  milestone2.ipynb
docs/milestone2/.ipynb_checkpoints/: milestone1-checkpoint.ipynb
docs/milestone2_progress/.ipynb_checkpoints/: ProgressReport-checkpoint.ipynb
src/: AutomaticDifferentiation.py  ReverseAD.py
src/AutomaticDifferentiation/: AutomaticDifferentiation.py  ReverseAD.py
src/AutomaticDifferentiation.egg-info/: PKG-INFO  SOURCES.txt
test/: __init__.py
tests/: run_tests.sh  test_forward_ad.py  test_reverse_ad.py
