[metadata]
name = cs107-FinalProject
version = 0.0.1
author = Ivonne Martinez
author_email = ivonne_martinez@g.harvard.edu
description = Fall2021 CS107 Automatic Diff Project
long_description = file : README.md
long_description_content_type = test/markdown
url = https://github.com/cs107-sandbox/cs107-FinalProject
classifiers = 
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
	=src
packages =find:
python_requires = >=3.6

[options.packages.find]
where =src
