[metadata]
name = cs107-FinalProject
version = 0.0.2
author = Gahyun Sung, I
author_email = gsung@g.harvard.edu
description = Forward Automatic Differentiation (scalar function of single output)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-sandbox/cs107-FinalProject.git
classifiers =
Intended Audience :: Developers
Programming Language :: Python :: 3
Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
= src
packages = find:
python_requires = >=3.6
install_requires = 
	numpy

[options.packages.find]
where = src